--- a/SeñorDeMuruhuay/gravestone-shop/src/styles/main.css
+++ b/SeñorDeMuruhuay/gravestone-shop/src/styles/main.css
@@ -1,17 +1,17 @@
 body {
   font-family: 'Segoe UI', Arial, sans-serif;
-  background: linear-gradient(135deg, #232526 0%, #414345 100%);
+  background: linear-gradient(135deg, #303030 0%, #000000 100%);
   margin: 0;
-  color: #eaeaea;
+  color: #000000;
 }
 
 header {
-  background: linear-gradient(90deg, #232526 0%, #414345 100%);
+  background: linear-gradient(90deg, #202020 0%, #181818 100%);
   color: #fff;
   padding: 2rem 0 1rem 0;
   text-align: center;
   border-radius: 0 0 18px 18px;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  box-shadow: 0 4px 16px rgba(96, 96, 96, 0.18);
 }
 
 .header-content {
@@ -33,8 +33,8 @@ header {
   height: 54px;
   width: 54px;
   object-fit: contain;
-  border-radius: 8px;
-  background: #fff;
+  border-radius: 40px;
+  background: #252525;
   box-shadow: 0 2px 8px rgba(0,0,0,0.07);
 }
 
@@ -43,7 +43,7 @@ header {
   font-weight: bold;
   color: #fff;
   letter-spacing: 1.5px;
-  text-shadow: 0 2px 8px rgba(0,0,0,0.18);
+  text-shadow: 0 2px 8px rgba(50, 50, 50, 0.18);
 }
 
 h1 {
@@ -66,12 +66,12 @@ nav a {
 }
 
 main {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 1rem auto;
   padding: rem;
   background: #1f1f1f;
   border-radius: 1px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07);
 }
 
 .container {
@@ -243,7 +243,7 @@ select:focus {
 }
 
 .model-price {
-  color: #ffd700;
+  color: #ffe136;
   font-weight: bold;
   letter-spacing: 0.5px;
 }
@@ -260,8 +260,8 @@ footer {
 }
 
 .hub-section {
-  background: linear-gradient(184deg, #232526 60%, #414345 100%);
-  border-radius: 16px;
+  background: linear-gradient(184deg, #101010 60%, #0e0e0e 100%);
+  border-radius: 26px;
   box-shadow: 0 2px 12px rgba(71, 71, 71, 0.13);
   margin: 2rem 0 2.5rem 0;
   padding: 2.5rem 2rem 2rem 2rem;
@@ -303,7 +303,7 @@ footer {
   border-radius: 8px;
   padding: 0.6em 1.2em;
   font-weight: 500;
-  box-shadow: 0 1px 4px rgba(0,120,215,0.06);
+  box-shadow: 0 1px 4px rgba(28, 28, 28, 0.06);
   border: 1.5px solid #0078d7;
 }
 
@@ -415,12 +415,12 @@ footer {
 }
 
 .store-info {
-  color: #b6e0ff;
+  color: #ffffff;
   font-size: 1.05em;
   background: #232526;
   border-radius: 8px;
   padding: 1em 1.5em;
-  box-shadow: 0 1px 4px rgba(0,120,215,0.06);
+  box-shadow: 0 1px 4px rgba(28, 28, 28, 0.06);
   display: inline-block;
 }
 
