--- a/SeñorDeMuruhuay/gravestone-shop/src/styles/main.css
+++ b/SeñorDeMuruhuay/gravestone-shop/src/styles/main.css
@@ -595,9 +595,9 @@ footer {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   #lightbox-actions > div {
-    top: 550px !important; /* Ajusta este valor según lo que necesites */
+    top: 650px !important;
     right: 6px !important;
   }
 }
